--- a/Auto City Insights/signup.html
+++ b/Auto City Insights/signup.html
@@ -4,9 +4,12 @@
   <title>Sign Up Page</title>
   <link rel="stylesheet" type="text/css" href="css/signup.css">
   <div class="header">
-    <div></div>
-    <img class="logo" src="images/autoInsights.png" alt="Logo">
-    <h1>Sign Uuuup</h1>
+    <div>
+      <img class="logo" src="images/autoInsights.png" alt="Logo">
+    </div>
+    <div>
+      <h1>Auto Insights</h1>
+    </div>
   </div>
 </head>
 <body>
