--- a/Auto City Insights/signup.html
+++ b/Auto City Insights/signup.html
@@ -10,6 +10,9 @@
     <div>
       <h1>Auto Insights</h1>
     </div>
+    <div>
+      <button class="signupbtn" onclick="window.location.href='login.html'">Sign In</button>
+    </div>
   </div>
 </head>
 <body>
@@ -29,7 +32,7 @@
       <button type="button" class="cancelbtn">Cancel</button>
     </form>
     <div style="text-align: center;">
-      <p>Already have an account? <button class="signupbtn" onclick="window.location.href='login.html'">Sign In</button></p>
+      <p>Already have an account?</p>
     </div>
   </div>
 </body>
