--- a/Auto City Insights/signup.html
+++ b/Auto City Insights/signup.html
@@ -16,6 +16,10 @@
   </div>
 </head>
 <body>
+  <div class="redSignUp">
+    <h2>Sign Up</h2>
+  </div>
+
   <div class="container">
     
     <form>
