--- a/Auto City Insights/signup.html
+++ b/Auto City Insights/signup.html
@@ -48,7 +48,7 @@
     </div>
       </div> 
 
-      <div>
+      <div class="signupbtn-row">
       <button type="submit" class="signupbtn">Create Your Account!</button>
       </div>
     </form>
