sign up css done

--- a/Auto City Insights/signup.html
+++ b/Auto City Insights/signup.html
@@ -20,7 +20,7 @@
   <div class="signup-form">
     <form>
       <div class="signup-row">
-        <div>
+        <div class="signup-text">
           <label for="username"><b>Account Username:</b></label>
         </div>
         <div>
@@ -29,7 +29,7 @@
       </div>
 
       <div class="signup-row">
-        <div>
+        <div class="signup-text">
           <label for="password"><b>Password:</b></label>
         </div>
         <div>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="signup-row">
-        <div>
+        <div class="signup-text">
           <label for="confirm_password"><b>Confirm Password:</b></label>
         </div>
         <div>
