--- a/Auto City Insights/login.html
+++ b/Auto City Insights/login.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <title>Sign In Page</title>
   <link rel="stylesheet" type="text/css" href="css/login.css">
-  <title>Login Page</title>
+  <div class="header">
+    <div>
+      <img class="logo" src="images/autoInsights.png" alt="Logo">
+    </div>
+    <div>
+      <h1>Auto Insights</h1>
+    </div>
+  </div>
 </head>
 <body>
-  <div class="container">
-    <h1>Login</h1>
+  <div class="redSignIn">
+    <h2>Sign In</h2>
+  </div>
+
+  <div class="signin-form">
     <form>
-      <label for="username"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="username" required>
+      <div class="signin-row">
+        <div class="signin-text">
+          <label for="username"><b>Account Username:</b></label>
+        </div>
+        <div>
+          <input type="text" placeholder="Enter Username" name="username" required>
+        </div>
+      </div>
 
-      <label for="password"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="password" required>
+      <div class="signin-row">
+        <div class="signin-text">
+          <label for="password"><b>Password:</b></label>
+        </div>
+        <div>
+          <input type="password" placeholder="Enter Password" name="password" required>
+        </div>
+      </div>
 
-      <button type="submit" class="signinbtn">Sign In</button>
-      <button type="button" class="cancelbtn">Cancel</button>
+      <div class="signupbtn-row">
+        <div class="forgot-text">
+          <label><p>Forgot your password? Click here:</p></label>
+        </div>
+      </div>
+
+      <div class="signupbtn-row">
+        <button type="submit" class="signupbtn">Sign In</button>
+      </div>
     </form>
-    <div style="text-align: center;">
-      <p>Don't have an account? <button class="signupbtn" onclick="window.location.href='signup.html'">Sign Up</button></p>
-    </div>
   </div>
 </body>
 </html>
