--- a/Auto City Insights/comment.html
+++ b/Auto City Insights/comment.html
@@ -17,12 +17,12 @@
             <nav class="navigation hide" id="navigation">
                 <span class="close-icon" id="close-icon" onclick="showIconBar()"><i class="fa fa-close"></i></span>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="forums.html">Forums</a></li>
-                    <li class="nav-item"><a href="detail.html">Detail</a></li>
+                    <li class="nav-item"><a href="forums.html">Reviews</a></li>
+              
                 </ul>
             </nav>
             <a class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
-            <div class="brand">My Forum</div>
+            <div class="brand">Comment Section</div>
         </div>
         <!--SearchBox Section-->
         <div class="search-box">
@@ -143,7 +143,7 @@
 
     </div>
     <footer>
-        <span>&copy;  Selmi Abderrahim | All Rights Reserved</span>
+        <span>&copy;  Auto Insights | All Rights Reserved</span>
     </footer>
     <script src="main.js"></script>
 </body>
