--- a/Auto City Insights/comment.html
+++ b/Auto City Insights/comment.html
@@ -17,7 +17,7 @@
             <nav class="navigation hide" id="navigation">
                 <span class="close-icon" id="close-icon" onclick="showIconBar()"><i class="fa fa-close"></i></span>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="forums.html">Reviews</a></li>
+                    <li class="nav-item"><a href="reviews.html">Reviews</a></li>
               
                 </ul>
             </nav>
