--- a/Auto City Insights/reviews.html
+++ b/Auto City Insights/reviews.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum</title>
+    <title>
+        
+    </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,124 +39,124 @@
         </div>
     </header>
     <div class="container">
-        <div class="subforum">
-            <div class="subforum-title">
+        <div class="subreview">
+            <div class="subreview-title">
                 <h1>General Information</h1>
             </div>
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>12 Dec 2020</small>
                 </div>
             </div>
 
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>12 Dec 2020</small>
                 </div>
             </div>
 
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>12 Dec 2020</small>
                 </div>
             </div>
 
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>12 Dec 2020</small>
                 </div>
             </div>
 
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>12 Dec 2020</small>
                 </div>
             </div>
 
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>30 Nov 2023</small>
                 </div>
             </div>
 
-            <div class="subforum-row">
-                <div class="subforum-icon subforum-column center">
+            <div class="subreview-row">
+                <div class="subreview-icon subreview-column center">
                     <i class="fa fa-car center"></i>
                 </div>
-                <div class="subforum-description subforum-column">
+                <div class="subreview-description subreview-column">
                     <h4><a href="#">Description Title</a></h4>
                     <p>Description Content: ""</p>
                 </div>
-                <div class="subforum-stats subforum-column center">
+                <div class="subreview-stats subreview-column center">
                     <span>24 Posts | 12 Topics</span>
                 </div>
-                <div class="subforum-info subforum-column">
+                <div class="subreview-info subreview-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
                     <br>on <small>30 Nov 2023</small>
                 </div>
